# pre-commit-clang-format

./: .pre-commit-config.yaml  hooks.yaml  run.sh  setup.cfg
pre_commit_hooks/: check_clang_then_run.py
