[metadata]
name = pre_commit_clang_format
version = 1.0.0
description = Clang-format-pre-commit
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-clang-then-run = pre_commit_hooks.check_clang_then_run:main

[bdist_wheel]
universal = True

